# shgen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  release.tar
.github/workflows/: main.yml
benchmark/: benchmark.cc  sheval.cc  sheval.h  shgentest.h
example/: l0_3_double.h  l0_3_float.h  l0_3_sse.h  l0_3_template.h  testheader.h
src/: extras.cc  extras.h  main.cc  shgen.cc  shgen.h
